k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fitness-app

  template:
    metadata:
      labels:
        app: fitness-app

    spec:
      containers:
      - name: fitness-app
        image: yash2172/fitness-tracker:v1.0.0

        ports:
        - containerPort: 5000apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fitness-app

  template:
    metadata:
      labels:
        app: fitness-app

    spec:
      containers:
      - name: fitness-app
        image: yash2172/fitness-tracker:v1.0.0

        ports:
        - containerPort: 5000
