k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fitness-service

spec:
  type: LoadBalancer

  selector:
    app: fitness-app

  ports:
  - port: 80
    targetPort: 5000
